--- a/.github/workflows/graphviz.yml
+++ b/.github/workflows/graphviz.yml
@@ -10,3 +10,8 @@ jobs:
       uses: actions/checkout@v3
     - name: Lancement graphviz
       run: ./run1.sh g1
+    - name: upload du resultat
+      uses: actions/upload-artifact@v4
+      with:
+        name: raoul
+        path: g1.svg
